Revision history for Perl extension Win32::Monitoring::WindowPing.

Win32-Monitoring-WindowsPing-0.03, Wed 2008-08-13 
-------------------------------------------------
- added license and license comments

Win32-Monitoring-WindowsPing-0.02, Fri 2008-07-25
--------------------------------------------------
- first running version
- moved a lot code to XS specific code sections
- added documentation
- added example application

Win32-Monitoring-WindowsPing-0.01, Web 2008-07-23
--------------------------------------------------
- original version; created by h2xs 1.23 with options
  -cfn Win32::Monitoring::WindowPing
