@@ -1,5 +1,14 @@
 Revision history for Perl extension Win32::Monitoring::WindowPing.
 
+Win32-Monitoring-WindowsPing-0.05, Fri 2008-08-22
+-------------------------------------------------
+- added ppd file
+- added remarks on development download area
+
+Win32-Monitoring-WindowsPing-0.04, Thu 2008-08-21
+-------------------------------------------------
+- added new example and more documentation
+
 Win32-Monitoring-WindowsPing-0.03, Wed 2008-08-13 
 -------------------------------------------------
 - added license and license comments
